2010-02-16  Jan Nijtmans  <nijtmans@users.sf.net>

    * unix/tkUnixWm.c       make TkSetTransientFor static

2010-02-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl Backport various formatting (spacing)
	* generic/ttk/ttk.decls       changes from HEAD, so diffing
	* generic/ttk/ttkDecls.h      between 8.5.x and 8.6 shows the
	* generic/tk*.decls           real structural differences again.
	* generic/tk*Decls.h          (any signature change not backported!)

2010-01-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkBind.c      Fix various gcc-4.4 warnings, all
	* generic/tkListbox.c   backported from HEAD.
	* generic/tkText.c
	* generic/ttk/ttkInit.c

2010-01-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/bgerror.tcl:  [TIP 359]: Extended Window Manager Hints
	* library/clrpick.tcl:  following the freedesktop.org specification
	* library/demos/widget: are now supported on X11 using a new
	* library/dialog.tcl:   wm attribute called '-type'
	* library/msgbox.tcl:   This feature is now used in the Tk library
	* library/tkfbox.tcl:   functions where appropriate.
	* library/ttk/combobox.tcl:
	* tests/unixWm.test:
	* tests/wm.test:
	* unix/tkUnixWm.c:

2010-01-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvas.c (TagSearchScanExpr): [Bug 2931374]: Stop overflow
	of working buffer during construction of long tag expressions.

2010-01-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvas.c:      [Patch 2932808]: Canvas items not
	                           updating on widget state change.

2010-01-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/menu.n:           [TIP 360]: Remove special handling of
	* library/obsolete.tcl: the .help menu on X11.
	* unix/tkUnixMenu.c:

	* library/menu.tcl:      [TIP 360] Make Tk menu activation
	* library/obsolete.tcl:  follow mouse movements.

2010-01-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
